force-app/main/default/objects/Heuristic_Duplicate_Member__c/Heuristic_Duplicate_Member__c.object-meta.xml
<CustomObject>
  <label>Heuristic Duplicate Member</label>
  <nameField>
    <displayFormat>HDM-{000000}</displayFormat>
    <label>Member Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Heuristic Duplicate Members</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>