force-app/main/default/objects/Heuristic_Duplicate_Member__c/fields/Group__c.field-meta.xml
<CustomField>
  <fullName>Group__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Group</label>
  <referenceTo>Heuristic_Duplicate_Group__c</referenceTo>
  <relationshipLabel>Heuristic Duplicate Group Members</relationshipLabel>
  <relationshipName>HeuristicDuplicateGroupMembers</relationshipName>
  <type>Lookup</type>
</CustomField>