force-app/main/default/objects/Heuristic_Duplicate_Member__c/fields/Scan__c.field-meta.xml
<CustomField>
  <fullName>Scan__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Scan</label>
  <referenceTo>Heuristic_Duplicate_Scan__c</referenceTo>
  <relationshipLabel>Heuristic Duplicate Scan Members</relationshipLabel>
  <relationshipName>HeuristicDuplicateScanMembers</relationshipName>
  <type>Lookup</type>
</CustomField>