force-app/main/default/objects/Heuristic_Duplicate_Member__c/fields/Score__c.field-meta.xml
<CustomField>
  <fullName>Score__c</fullName>
  <label>Score</label>
  <precision>3</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>